<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/drawable_weather"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



       <Button
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:id="@+id/BtnBackMain"
           android:layout_marginLeft="10dp"
           android:layout_marginTop="15dp"
           android:background="@drawable/buton"/>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/background_color"
                android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">



                <ImageView
                    android:id="@+id/ImageViewSunnyCloudy"
                    android:layout_width="170dp"
                    android:layout_height="170dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/TextViewTomorrowDnipro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:hint="@string/TextViewTomorrow"
                        android:textAlignment="center"
                        android:textColorHint="@color/white"
                        android:textSize="25sp" />


                    <TextView
                        android:id="@+id/TextViewDegreeMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="6°"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="50dp" />


                    <TextView
                        android:id="@+id/TextViewMostlyCloudyMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/TextViewMostlyCloudy"
                        android:textAlignment="center"
                        android:textColorHint="@color/white"
                        android:textSize="20sp" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_color"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.444"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ImageViewRainDnipro"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/rain"/>



                    <TextView
                        android:id="@+id/TextViewDegreeRain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:text="72%"
                        android:textColor="@color/white"
                        android:textSize="20sp" />


                    <TextView
                        android:id="@+id/TextViewRainMainDnipro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:hint="@string/TextViewRain"
                        android:textColorHint="@color/white"
                        android:textSize="20sp" />



                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="0.222"
                    android:orientation="vertical">



                    <ImageView
                        android:id="@+id/ImageViewWindy"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/windy"/>


                    <TextView
                        android:id="@+id/TextViewWindyDegree"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="3 M/C"
                        android:textColor="@color/white"
                        android:textSize="17sp" />


                    <TextView
                        android:id="@+id/TextViewWindyMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/TextViewWindy"
                        android:textColorHint="@color/white"
                        android:textSize="20sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/background_color"
                    android:orientation="vertical"
                    android:padding="8dp">


                    <ImageView
                        android:id="@+id/ImageViewHumidityMain"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="45dp"
                        android:background="@drawable/humidity" />


                    <TextView
                        android:id="@+id/TextViewHumidityDegreeMain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="45dp"
                        android:layout_marginTop="5dp"
                        android:text="79%"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/TextViewHumidityMainDnipro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:hint="@string/TextViewHumidity"
                        android:textColorHint="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/RecylerViewFuture"
                android:layout_marginTop="380dp"
                android:nestedScrollingEnabled="true"/>

        </RelativeLayout>



    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>